--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Just flatten.  srsly",
   "main": "index.js",
   "scripts": {
-    "test": "tape test.js"
+    "test": "tape test.js && echo 'Testing readme examples...' && jsmd readme.md && echo 'All done!'"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,21 @@
   "bugs": {
     "url": "https://github.com/TehShrike/just-flatten/issues"
   },
-  "homepage": "https://github.com/TehShrike/just-flatten#readme"
+  "homepage": "https://github.com/TehShrike/just-flatten#readme",
+  "devDependencies": {
+    "babel-preset-es2015": "6.9.0",
+    "babelify": "7.3.0",
+    "jsmd": "0.3.1",
+    "tape": "4.5.1"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": "es2015"
+        }
+      ]
+    ]
+  }
 }
